Solution, Base includes, README, gitignore
Base includes
- wrapers (socket, wsadata, addrinfo)
- global helpers (casts, localstoi, type alises, mutex print)
- gobackn (to redo)
- producerconsumer (as demonstrated in lecture)

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,15 @@
 *.exe
 *.out
 *.app
+
+# Directories
+cs260_4/.vs/
+cs260_4/Debug/
+cs260_4/Release/
+cs260_4/client/Debug/
+cs260_4/client/Release/
+
+#Files
+*.user
+*.filters
+*.ini
