--- a/cs260_4/client/client.vcxproj
+++ b/cs260_4/client/client.vcxproj
@@ -145,6 +145,7 @@
   <ItemGroup>
     <ClInclude Include="backendwrap.h" />
     <ClInclude Include="backend\baseincludes.h" />
+    <ClInclude Include="backend\clientshandler.h" />
     <ClInclude Include="backend\globalhelpers.h" />
     <ClInclude Include="backend\gobackn.h" />
     <ClInclude Include="backend\producerconsumer.h" />
@@ -154,6 +155,7 @@
     <ClInclude Include="backend\wrappers\wrapWSADATA.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="backend\clientshandler.cpp" />
     <ClCompile Include="backend\globalhelpers.cpp" />
     <ClCompile Include="backend\gobackn.cpp" />
     <ClCompile Include="backend\wrappers\wrapSOCKET.cpp" />
