ball and paddle object
updated gitignore to include x64 files

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,8 @@
 cs260_4/.vs/
 cs260_4/Debug/
 cs260_4/Release/
+cs260_4/client/x64/Debug/
+cs260_4/client/x64/Release/
 cs260_4/client/Debug/
 cs260_4/client/Release/
 
